fix: spacing for info-card boxes

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -66,7 +66,7 @@ body{
     margin-bottom: 30px;
 }
 
-.cv-block.block-intro .btn {
+.cv-block.block-intro .btn{
   color: #ed36ad;
   border-color: #ed36ad;
   padding: 0.375rem 1rem;
@@ -163,7 +163,7 @@ body{
 .cv-block.info .education .intro-text{
     text-align: center;
     font-size: 1.2em;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .cv-block.info .education h3{
@@ -183,8 +183,12 @@ body{
     text-align: center;
 }
 
-.cv-block .info-card.skills{
-    margin-bottom: 80px;
+.cv-block #skills .row.justify-content-center{
+    margin-bottom: 100px;
+}
+
+.cv-block #hobbies .row.justify-content-center{
+    margin-top: 80px;
 }
 
 .cv-block .info-card.skills h3{
